gprofng/src/DwarfLib.cc
@@ -2034,7 +2034,10 @@ DwrCU::set_die (Dwarf_Die die)
 	  atf->u.offset = debug_infoSec->GetULEB128 ();
 	  break;
 	case DW_FORM_ref_addr:
-	  atf->u.offset = debug_infoSec->GetADDR ();
+	  if (version > 2)
+	    atf->u.offset = debug_infoSec->GetRef ();
+	  else
+	    atf->u.offset = debug_infoSec->GetADDR ();
 	  break;
 	case DW_FORM_sec_offset:
 	  atf->u.offset = debug_infoSec->GetRef ();
